Fix CORS configuration - use FRONTEND_URL env var and allowedOriginPatterns